fix absolute img error on mobile device new page

--- a/app/assets/stylesheets/users/_new-mobile.scss
+++ b/app/assets/stylesheets/users/_new-mobile.scss
@@ -19,8 +19,6 @@ h1{
   height: 100vh;
   img{
     width: 100%;
-    position: absolute;
-    bottom: 0;
   }
 }
 .main-mobile-text-1{
