--- a/app/assets/stylesheets/users/_refer.scss
+++ b/app/assets/stylesheets/users/_refer.scss
@@ -1,3 +1,4 @@
+@import "new";
 .refer-friends-container{
   width: 100%;
   height: 100vh;
@@ -86,7 +87,8 @@
       border-top: 1px solid $green;
       .page-content{
         position: relative;
-        margin: 0 270px;
+        width: 1150px;
+        margin: 0 auto;
       }
       .callout{
         text-align: center;
